css/index.css
/* Use your own code or past solution for Great Idea Web Page CSS here! */
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Set every element's box-sizing to border-box */
* {
    box-sizing: border-box;
}

html, body {
    height: 100%;
    font-family: 'Titillium Web', sans-serif;
}

h1, h2, h3, h4, h5 {
    font-family: 'Bangers', cursive;
    letter-spacing: 1px;
    margin-bottom: 15px;
}

/* Your code starts here! */
@media (max-width: 800px) {
    .container {
       width: 800px;
       margin: 0 auto;
       padding: 20px 1%;
    }
    nav {
        display: flex;
        flex-direction: column-reverse;
    }
    .container .top-nav-bar {
        display: flex;
        flex-direction: column-reverse;
        padding: 5%;
    }
    .container .top-nav-bar a:link {
        color: black;
        text-decoration: none;
        padding: 3%;
    }
    #header-img {
        display: none;
    }
    .container .top-content {
        display: flex;
        width: 100%;
        flex-direction: column;
        text-align: center;
    }
    .top-content .firstcolumn button {
        width: 30%;
        text-align: center;
    }
}

@media (max-width: 500px){
    .container { 
       width: 500px;
    }
    .container .top-nav-bar {
        display: flex;
        flex-direction: column-reverse;
        padding: 5%;
    }
    .container .top-nav-bar a:link {
        width: 100%;
        color: black;
        text-decoration: none;
        padding: 3%;
        border-top: 1px solid gray;
        border-bottom: 1px solid gray;
        text-align: center;
    }
    #header-img {
        display: none;
    }
    .container .top-content {
        display: flex;
        width: 100%;
        flex-direction: column;
        text-align: center;
    }
    .top-content .firstcolumn button {
        display: flex;
        width: 30%;
        text-align: center;
    }
    .middle-content h2 {
        padding: 10px 2%;
        margin: 0;
    }
    .middle-content .row {
        display: flex;
        flex-direction: column;
        text-align: left;
        width: 100%;
    }
    .middle-img{
        display: flex;
        width: 100%;
    }        
    .container .top-content {
    display: flex;
    width: 100%;
    flex-direction: column;
    text-align: center;
    }
    .container .bottom-content {
        display: flex;
        width: 100%;
        flex-direction: column;
        text-align: center;
    }
    .bottom-content .row {
        display: flex;
        flex-direction: column;
        text-align: left;
        width: 100%;
    }
    .bottom-content h2 {
        padding: 10px 2%;
        margin: 0;
    }
    #contact h2 {
        display: flex;
        justify-content: left;
        margin: 0% auto;
        width: 100%;
    }
}

h1 {
	font-size: 80px;
	display: block;
	padding: 50% auto;
	margin: 5%;
	width: 80%;
}

h2 {
	font-size: 20px;
	display: block;
	padding: 50% auto;
	padding: 10px;
	width: 90%;
	text-align: left;
}

.tablet-nav {
    display: flex;
    justify-content: space-between;
    width: 100%;
    margin: 0 auto;
    padding: 2%;
    align-items: center;
}
.tablet.nav a:link {
	color: black;
	text-decoration: none;
	padding: 2% auto;
}
.container {
   width: 80%;
   margin: 0 auto; 
}
button {
	-webkit-transition-duration: 0.4s;
	transition-duration: 0.4s;
	width: 30%;	
	padding: 10px 10px 10px 10px;
	margin: 0px;
	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19)
}
button:hover {
	background-color:red;
	color: white;
	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
}

.top-content {
    display: flex;
    width: 100%;
	margin: 0% auto;
	border-bottom: 3px solid red;
}
.middle-content {
    margin-bottom: 20px;
}

.middle-content h2 {
    padding: 12px 2%;
    margin-bottom: 0;
}

.middle-content .boxes {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
}
.bottom-content {
    display: flex;
    margin: 0 2% 20px;
    justify-content: space-around;
}
.row {
	display: flex;
	margin: 10px 10px 10px 10px;
	padding: 10px;
	width: 100%;
  }
  
.column {
	flex: 100%;
	margin: 10px 10px 10px 10px;
	padding: 0px;
	width: 100%;
	text-align: left;
}
.firstcolumn {
    display: flex;
	flex-direction: column;
	margin: 1%;
	padding: 0px 20px 0px 0px;
	width: 100%;
    align-items: center;
}
.middle-img{
	width: 100%;
	margin: 10px;
	padding: 10px;
}

#contact{
	text-align: left;
	width: 100%;
	margin: 10px;
	padding: 10px;
	border-top: 3px solid red;
}

.copyright{
	text-align: center;
	width: 100%;
}

